# re2c-lemon-example

./: .gitignore  README.md  Why_Lemon.txt  Why_re2c vs ragel.txt  lexer_parser_steps_tutorial.md
LatestVersion_DEC2020/: re2c-2.0.3.tar.xz
MattScarpino_re2c_demo/: LICENSE  README  simple_c  simple_c.c  tokens.h
MattScarpino_re2c_demo/part2/: simple_c.re
Tutorial/: SymTab.cs  lexer_parser_steps_tutorial.md  symtab.c  symtab.h
brskari_lemon+flex/: readme.txt
brskari_lemon+flex/part1_c/: main.c  shell
brskari_lemon+flex/part1_cpp/: Makefile  shell  shellparser.cpp  shellparser.out
brskari_lemon+flex/part2_c/: Makefile  readme.txt  shell  shellscanner.l  shellscanner.yy.c
brskari_lemon+flex/part2_cpp/: Makefile  main.cpp  shellparser.cpp
re2c_only/: main.c  scanner.h  scanner.re  testre2c
re2c_only/test1/: main.c  scanner.h  testre2c
re2c_only/test2/: input  main.c  scanner.h  scanner.re
re2c_only/test3/: Makefile  main.c  scanner.h  scanner.re
re2c_only/test5_calc/: definitions.h  main.c  scanner.re  util.h
re2c_only/tokuhirom_mycalc_lemon+re2c_ported to C/: definitions.h  main.c  parser.h  parser.lem  parser.out  scanner.re.old
src/: CMakeLists.txt  Makefile  lexer_parser_steps_tutorial.md  main.c  parser.c  scanner.re2c  test.h
src/deleteme/: Makefile  scanner.re2c.h  shell
src/golang_antlrv4/: C.g4  build.sh  example1.go  go.mod  readme.txt  sourceme.sh
src/golang_antlrv4/antlr_4.9.1_go_runtime/: go.mod
src/golang_antlrv4/parser/: calc_base_listener.go  calc_lexer.go  calc_listener.go  calc_parser.go
src/lemon+re2c/: CMakeLists.txt  main.c  parser.lem  parser.out  scanner.re2c.h  shell
src/lemon+re2c/MattScarpino_part1-modified/: simple_c.c  simple_c.re
src/lemon+re2c/test0/: Makefile
src/lemon+re2c/test1/: main.c  parser.h  parser.lem
src/lemon+re2c/test1_scanner/: CMakeLists.txt  compile.sh
src/lemon+re2c/test1_scanner/include/: common.h
src/lemon+re2c/test1_scanner/scanner/: definitions.re2c  scanner.h  scanner.re2c
src/lemon+re2c/test1_scanner/src/: main.c
src/lemon+re2c/test2_parser+scanner_separately/: CMakeLists.txt  compile.sh
src/lemon+re2c/test2_parser+scanner_separately/include/: common.h  token.h
src/lemon+re2c/test2_parser+scanner_separately/parser/: parser.c  parser.lemon  parser_definitions.h
src/lemon+re2c/test2_parser+scanner_separately/scanner/: definitions.re2c  scanner.h  scanner.re2c
src/lemon+re2c/test2_parser+scanner_separately/src/: main.c
src/lemon+re2c/test3_parser+scanner_integrated/: CMakeLists.txt
src/lemon+re2c/test3_parser+scanner_integrated/include/: common.c  common.h  token.h
src/lemon+re2c/test3_parser+scanner_integrated/parser/: parser.lemon
src/lemon+re2c/test3_parser+scanner_integrated/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/test3_parser+scanner_integrated/src/: main.c
src/lemon+re2c/test4_calculator/include/: common.h  token.h
src/lemon+re2c/test4_calculator/parser/: parser.lemon
src/lemon+re2c/test4_calculator/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/test4_variable/: CMakeLists.txt
src/lemon+re2c/test4_variable/include/: common.c  common.h  token.h
src/lemon+re2c/test4_variable/parser/: lempar.c  parser.lemon
src/lemon+re2c/test4_variable/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/test4_variable/src/: main.c
src/lemon+re2c/test5_C_grammar/: CMakeLists.txt  draft.lemon
src/lemon+re2c/test5_C_grammar/include/: token.h
src/lemon+re2c/test5_C_grammar/parser/: C_grammar.lemon  parser.c  parser.h  parser.lemon  parser.out
src/lemon+re2c/test5_C_grammar/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/test5_C_grammar/src/: main.c
src/lemon+re2c/test5_variable/include/: common.c
src/lemon+re2c/test5_variable/libs/lemon/: CMakeLists.txt  lempar.c_lemon1.69.c
src/lemon+re2c/test5_variable/parser/: parser.lemon
src/lemon+re2c/test5_variable/parser/c_grammar_lemon/: c_bnf.c  c_bnf.h  c_bnf.lemon  c_bnf.out  c_bnf.re2c
src/lemon+re2c/test5_variable/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/xxxtest3_parser+scanner_integrated/: compile.sh
src/lemon+re2c/xxxtest3_parser+scanner_integrated/include/: common.c  common.h  token.h
src/lemon+re2c/xxxtest3_parser+scanner_integrated/parser/: parser.lemon
src/lemon+re2c/xxxtest3_parser+scanner_integrated/scanner/: definitions.re2c  scanner.re2c
src/lemon+re2c/xxxtest3_parser+scanner_integrated/src/: main.c
src/only_lemon/test0/: mycalc  parser.c  parser.out  scanner.h
src/only_lemon/test1/: example1.c  example1.lem
src/only_lemon/test1_main/: Makefile  example1.c  example1.lem  main.c  testlemon
src/only_lemon/test1_main as extra/: Makefile  example1.c  testlemon
src/only_re2c/test2/: Makefile  definitions.h
src/only_re2c/test4/: testre2c
src/only_re2c/test5_calc/: testre2c
src/only_re2c/test6_scan_file/: Makefile  scan_file  scan_file.c  scan_file.re
src/only_re2c/test_etc_passwd/: Makefile  etc_passwd.c  etc_passwd.re
src/re2c_only/test1/: main.c  scanner.re
src/re2c_only/test2/: main.c
src/re2c_only/test5_calc/: main.c  scanner.h  scanner.re
src/re2c_only/tokuhirom_mycalc_lemon+re2c_ported to C/: Makefile  parser.out  scanner.h
theory_The brskari ported to C/: Makefile
tokuhirom_lemon+re2c/: main.cc  mycalc  parser.c  scanner.h
tokuhirom_mycalc_lemon+re2c_ported to C/: Makefile  README.md  definitions.h  main.c  main.cc  mycalc  parser.c  parser.lem  parser.yy  scanner.h  scanner.re
